--- a/Frontend/adventure-quest/src/pages/styles/Login.css
+++ b/Frontend/adventure-quest/src/pages/styles/Login.css
@@ -64,14 +64,15 @@
 
 
 /* Login Card */
-.login-card {
-  background-image: url('../../assets/images/cards.png');
-  background-size: 200% 200%;
+.login-card{
+  background-image: url('../../assets/images/card.svg');
+  background-size: 200% 195%;
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 1.5rem;
   position: relative;
 }
+
 
 /* Login Title */
 .login-title {
@@ -80,7 +81,7 @@
   font-weight: 900;
   color: #6B3E1D;
   text-align: center;
-  padding-top: 3rem;
+  padding-top: 6rem;
   margin-bottom: 2rem;
   text-shadow: 
     1px 1px 0 rgba(252, 215, 101, 0.5),
@@ -95,6 +96,7 @@
   gap: 1.5rem;
   padding-left: 3rem;
   max-width: fit-content;
+  margin-top: -10px;
   
 }
 
@@ -125,7 +127,7 @@
   font-family: inherit;
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 300px;
-  height: 15px;
+  height: 5px;
 }
 
 .form-input-login:focus {
@@ -172,10 +174,10 @@
   box-shadow: 
     0 5px 15px rgba(185, 108, 37, 0.5),
     inset 0 1px 0 rgba(252, 215, 101, 0.3);
-  margin-top: 0.5rem;
   width: 100px;
-  height: 50px;
+  height: 40px;
   align-self: center;
+  margin-top: -5px
 }
 
 .login-button:hover {
@@ -196,8 +198,8 @@
   text-align: center;
   font-size: 0.9rem;
   color: #6B3E1D;
-  margin-top: 0.0rem;
-  margin-bottom: 2rem;
+  margin-top: -0rem;
+  margin-bottom: 5rem;
 }
 
 .register-link {
@@ -205,7 +207,6 @@
   font-weight: 700;
   text-decoration: none;
   transition: all 0.3s ease;
-  margin-top: 0.15rem;
 }
 
 .register-link:hover {
