--- a/Frontend/adventure-quest/src/components/styles/CharacterCard.css
+++ b/Frontend/adventure-quest/src/components/styles/CharacterCard.css
@@ -1,22 +1,36 @@
-.character-card {
+/* CharacterCard.css */
+.character-frame {
     position: relative;
-    background-size: 40% 120%;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 24px;
-    display: flex;
-    flex-direction: column;
-}
-.character-card-content {
-    margin-top: 70px;
-    position: relative;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
+    width: 120%;
     height: 100%;
-    margin-left: 120px;
-    margin-bottom: 60px;
 }
+
+.card-frame {
+    position: absolute;
+    top: -30px;
+    left: -3%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+    pointer-events: none;
+}
+
 .character-image {
-    width: 50px;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    height: auto;
+    max-height: 85%;
+    object-fit: contain;
+    z-index: 2;
+}
+
+@media (max-width: 1024px) {
+    .btn-character-card {
+        width: 300px;
+        height: 360px;
+    }
 }
