--- a/Frontend/bisa-quest/src/components/styles/Button.css
+++ b/Frontend/bisa-quest/src/components/styles/Button.css
@@ -185,6 +185,8 @@
   color: white;
   border: 3px solid #991b1b;
   box-shadow: 0px 4px 0px #7f1d1d;
+  font-family: 'Pixelify Sans', cursive;
+  text-transform: uppercase;
 }
 
 .btn-danger:hover {
