--- a/Frontend/bisa-quest/src/components/styles/StudentCard.css
+++ b/Frontend/bisa-quest/src/components/styles/StudentCard.css
@@ -1,12 +1,13 @@
 .student-card {
   background: url('../../assets/images/card.svg') no-repeat center;
-  background-size: 130% 130%;
+  background-size: 150% 150%;
   padding: 1.8rem 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 480px;
   position: relative;
+  margin-top: -50px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   font-family: 'Pixelify Sans', 'Trebuchet MS', sans-serif;
 }
@@ -24,12 +25,17 @@
   border: 5px solid #78350f;
   box-shadow: 0 6px 16px rgba(120, 53, 15, 0.3);
   margin-bottom: 1rem;
+  margin-top: -10px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .student-card h3 {
   color: #78350f;
   font-size: 1.2rem;
   font-weight: 900;
+  margin-top: 6.5rem;
   margin-bottom: 0.1rem;
   text-align: center;
   text-transform: capitalize;
@@ -49,7 +55,7 @@
 }
 
 .quest-progress {
-  width: 90%;
+  width: 45%;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
